[REFACTOR] Changed vcproj to include from proper place

--- a/Workspace/Chess4Dummies/Chess4Dummies.vcproj
+++ b/Workspace/Chess4Dummies/Chess4Dummies.vcproj
@@ -226,6 +226,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\Game\View\Shader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\Game\View\Texture.cpp"
 				>
 			</File>
