[CODE] Improved chess board. Normal mapping still not working.

--- a/Workspace/Chess4Dummies/Chess4Dummies.vcproj
+++ b/Workspace/Chess4Dummies/Chess4Dummies.vcproj
@@ -222,6 +222,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\Game\View\Scene.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\Game\View\Scene.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\Game\View\Shader.cpp"
 				>
 			</File>
