--- a/Workspace/Chess4Dummies/Chess4Dummies.vcxproj
+++ b/Workspace/Chess4Dummies/Chess4Dummies.vcxproj
@@ -96,8 +96,13 @@
     <ClCompile Include="..\src\Game\View\Board.cpp" />
     <ClCompile Include="..\src\Game\View\DrawElement.cpp" />
     <ClCompile Include="..\src\Game\View\HelperFuncs.cpp" />
+    <ClCompile Include="..\src\Game\View\Pieces\Bishop.cpp" />
+    <ClCompile Include="..\src\Game\View\Pieces\King.cpp" />
+    <ClCompile Include="..\src\Game\View\Pieces\Knight.cpp" />
     <ClCompile Include="..\src\Game\View\Pieces\Marker.cpp" />
     <ClCompile Include="..\src\Game\View\Pieces\Pawn.cpp" />
+    <ClCompile Include="..\src\Game\View\Pieces\Queen.cpp" />
+    <ClCompile Include="..\src\Game\View\Pieces\Rook.cpp" />
     <ClCompile Include="..\src\Game\View\Scene.cpp" />
     <ClCompile Include="..\src\Game\View\Shader.cpp" />
     <ClCompile Include="..\src\Game\View\Texture.cpp" />
@@ -107,8 +112,13 @@
     <ClInclude Include="..\src\Game\View\Common.h" />
     <ClInclude Include="..\src\Game\View\DrawElement.h" />
     <ClInclude Include="..\src\Game\View\HelperFuncs.h" />
+    <ClInclude Include="..\src\Game\View\Pieces\Bishop.h" />
+    <ClInclude Include="..\src\Game\View\Pieces\King.h" />
+    <ClInclude Include="..\src\Game\View\Pieces\Knight.h" />
     <ClInclude Include="..\src\Game\View\Pieces\Marker.h" />
     <ClInclude Include="..\src\Game\View\Pieces\Pawn.h" />
+    <ClInclude Include="..\src\Game\View\Pieces\Queen.h" />
+    <ClInclude Include="..\src\Game\View\Pieces\Rook.h" />
     <ClInclude Include="..\src\Game\View\Scene.h" />
     <ClInclude Include="..\src\Game\View\Shader.h" />
     <ClInclude Include="..\src\Game\View\Texture.h" />
